# GUI-PC

./: .gitignore  README.md  prototype.pptx
Design/: GUI_robot(1).ai  GUI_robot.ai
gui/: CMakeLists.txt  package.xml
gui/build-gui_cbot1-Desktop-Debug/: Makefile
gui/build-gui_v2_robot-Desktop-Debug/: Makefile  gui_v2_robot
gui/gui_v2_robot/: Home_v2.qml  Main1.qml  check_weather.qml  end_v2.qml  going_v2.qml  going_v2_point2.qml  gui_v2_robot.pro  hello_v2.qml  main.cpp  main.qml  menu.qml  picture_v2.qml  qml.qrc  robotics_v2.qml  simplemenu.cpp  simplemenu.h  speech.qml  video_v2.qml
gui/launch/: emotion_face.launch  full.launch  test.launch
gui/scripts/: goto.py  gotopose.py  gotopose_copy.py  launch.py  note.txt  receive_signal.py  ros_weather.py  show_video.py  show_video_version1.py  speech_rviz.py  test.py  test_speech_to_text.py
gui/src/: Grammar.h  PhraseRule.h  SimpleMenu.cpp  SimpleMenu.h  SpeechRecognition.h  SpeechRecognitionCandidates.h  SpeechRecognitionRequest.h  SpeechRecognitionResponse.h  UsbCam.cpp  UsbCam.h  Vocabulary.h  aa.cpp  aa.h  backend.cpp  backend.h  gui_cbot1.pro  gui_cbot1.pro.user.67080c9  images_sub.cpp  images_sub.h  main.cpp  moving.cpp  moving.h  speech_recognition.cpp  speech_recognition.h  speech_recognition.h.autosave  weather.cpp  weather.h  ww.cpp  ww.h
